# blog-porting-native-to-mobile

./: .gitignore  CMakeLists.txt  README.md  release-android.sh  release-ios.sh
src/: CMakeLists.txt  Logging.cc  Logging.h  NativeLibrary.cc  NativeLibrary.h
src/jni/: NativeLibrary.java  NativeLibraryJNI.java  NativeObject.java  interface.i  interface_wrap.cpp
test/: CMakeLists.txt  NativeLibraryTest.cc
